/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java library project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/9.3.1/userguide/building_java_projects.html in the Gradle documentation.
 */

group = "io.github.bfur64"
version = "0.1.0-alpha"

plugins {
    // Apply the java-library plugin for API and implementation separation.
    `java-library`

    id("com.vanniktech.maven.publish") version "0.36.0"

    id("application")
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation(libs.junit)

    // This dependency is exported to consumers, that is to say found on their compile classpath.
    api(libs.commons.math3)

    // This dependency is used internally, and not exposed to consumers on their own compile classpath.
    implementation(libs.guava)

    implementation("com.googlecode.lanterna:lanterna:3.1.3")

    implementation("org.jline:jline:3.30.0")
    implementation("org.jline:jline-terminal-jna:3.30.0")
    implementation("org.jline:jline-reader:3.30.0")
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

mavenPublishing {
    coordinates(group.toString(), "menu-manager", version.toString())

    pom {
        name.set("menu-manager")
        description.set("A composable main menu system, built in Java using the Lanterna UI Library")
        inceptionYear.set("2026")
        url.set("https://github.com/BFUR64/menu-manager/")
        licenses {
            license {
                name.set("MIT License")
                url.set("https://opensource.org/license/mit")
                distribution.set("repo")
            }
        }
        developers {
            developer {
                id.set("BFUR64")
                name.set("Terrance")
                url.set("https://github.com/BFUR64/")
            }
        }
        scm {
            url.set("https://github.com/BFUR64/menu-manager/")
            connection.set("scm:git:https://github.com/BFUR64/menu-manager.git")
            developerConnection.set("scm:git:ssh://git@github.com/BFUR64/menu-manager.git")
        }
    }
}

application {
    mainClass = "examples.Demo"
}